# VideoPlayback

./: .gitignore  CMakeLists.txt  LICENSE  VideoPlayback.sln
.github/workflows/: cmake-multi-platform.yml
VideoPlayback/: CommonDef.h  LocalFileSource.cpp  LocalFileSource.h  VideoPlayback.qrc  VideoPlayback.vcxproj  VideoPlayback.vcxproj.filters  main.cpp  stdafx.cpp  stdafx.h
VideoPlayback/module/AtomDecoder/: AtomDecoder.cpp  AtomDecoder.h  Buffer.cpp  Buffer.h
VideoPlayback/module/AudioPlay/: AudioPlay.cpp  AudioPlay.h
VideoPlayback/module/BlackMagic/DeckLinkDeviceDiscovery/: DeckLinkDeviceDiscovery.cpp  DeckLinkDeviceDiscovery.h
VideoPlayback/module/LogModule/: Log.cpp  Log.h
VideoPlayback/module/MyContainer/: Buffer.cpp  Buffer.h  MyQueue.cpp  MyQueue.h
VideoPlayback/module/ThreadPool/: ThreadPool.cpp  ThreadPool.h
VideoPlayback/module/VideoDecoder/: AtomDecoder.cpp  AtomDecoder.h  HardDecoder.cpp  HardDecoder.h  VideoDecoder.cpp  VideoDecoder.h  VideoDecoderBase.cpp  VideoDecoderBase.h
VideoPlayback/module/VideoInfo/: VideoInfoAcqure.cpp  VideoInfoAcqure.h
VideoPlayback/module/VideoReader/: VideoReader.cpp  VideoReader.h
VideoPlayback/module/decoderedDataHandler/: PcmDatahandler.cpp  PcmDatahandler.h  YuvDataHandler.cpp  YuvDataHandler.h
VideoPlayback/module/decoderedDataHandler/PreviewAndPlay/: AtomPreviewAndPlay.cpp  AtomPreviewAndPlay.h  PreviewAndPlay.cpp  PreviewAndPlay.h
VideoPlayback/module/demux/: demuxer.cpp  demuxer.h
VideoPlayback/module/output/: AudioAndVideoOutput.cpp  AudioAndVideoOutput.h
VideoPlayback/module/source/: LocalFileSource.cpp  LocalFileSource.h  SourceBase.cpp  SourceBase.h
VideoPlayback/module/utils/: utils.cpp  utils.h
VideoPlayback/ui/: VideoPlayback.cpp  VideoPlayback.h  VideoPlayback.ui
VideoPlayback/ui/MySlider/: MySlider.cpp  MySlider.h
VideoPlayback/ui/MyTipDialog/: MyTipDialog.cpp  MyTipDialog.h
VideoPlayback/ui/OpenGLPreviewWidget/: OpenGLPreviewWidget.cpp  OpenGLPreviewWidget.h
VideoPlayback/unitest/: AtomDeocderTest.cpp  AtomPreviewAndPlayTest.cpp  AudioPlayTest.cpp  HardDecoderTest.cpp  PreviewAndPlayTest.cpp  VideoDecoderTest.cpp  VideoInfoAcqureTest.cpp  VideoPlaybackTest.cpp  VideoReaderTest.cpp
include/blackmagic_win/: DeckLinkAPI_h.h  DeckLinkAPI_i.c  com_ptr.h  targetver.h
include/ffmpeg/libavcodec/: avcodec.h  codec.h  codec_desc.h  codec_id.h  codec_par.h  version.h  version_major.h
include/ffmpeg/libavdevice/: version.h
include/ffmpeg/libavfilter/: version.h
include/ffmpeg/libavformat/: version.h
include/ffmpeg/libavutil/: ffversion.h  pixfmt.h  rational.h  version.h
include/ffmpeg/libpostproc/: version.h
include/libMXF++/mxf/: mxf_macros.h
lib/: MXF++.lib  MXF.lib  avcodec-60.def  avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil-58.def  avutil.lib  libavdevice.so.60.1.100  libavformat.so.60.3.100  libavutil.so.58.2.100  libpostproc.so.57.1.100  libswresample.so.4.10.100  libswscale.so.7.1.100  spdlog.lib  swscale.lib  yuv.lib
unittest/: unittest.qtvscr  unittest.sln  unittest.vcxproj  unittest.vcxproj.filters
